

14-04-08 (0.9.5) Ronny Vorpahl <vorpahl@artplan21.de>

	* [BUGFIX] #40554: Link generation fails for translated acronyms
		* removed spaces from dataWrap
		* Thanks to Philipp Kitzberger for the solution


11-12-08 (0.9.4) Ronny Vorpahl <vorpahl@artplan21.de>

	* [BUGFIX] #31929: FE-plugin ignores storage page configuration
		* Thanks to Michael Schreiner for the solution
	* [BUGFIX] #31930: Debug options are activated on glossary detail page (if logged into Typo3-Backend)
		* thanks to Michael Schreiner for the hint
	* Synced both typoscript configurations (old+new) as far as possible
		* they differ only in css/wraps/list-styling - no behavioral differences

	* TER upload


11-11-21 (0.9.3) Oliver Hader <oliver.hader@typo3.org>

	* added a second (more accessible) typoscript-configuration in folder "Configuration"
		* glossary elements are wrapped with correct CSS classes with extension prefixes
	* consistent usage of LL-XML in TCA
	* moved Tca.php from root folder to "Configuration"


11-11-04 (0.9.2) Oliver Hader <oliver.hader@typo3.org>

	* [BUGFIX] #31571: Wraps produce incorrect nested paragraph tags


11-11-03 (0.9.1) Ronny Vorpahl <vorpahl@artplan21.de>

	* Thanks to Xaver Maierhofer: changed <p class=back" -> <p class="back" in constants.txt
	* minor label changes


11-11-01 (0.9.0) Ronny Vorpahl <vorpahl@artplan21.de>

	* committed to TER

11-11-01 (0.8.4) Ronny Vorpahl <vorpahl@artplan21.de>

	* fixed sugesstion #31006:  changed Label of tx_a21glossary_main.link as suggested in

	* committing Bugfix/Maintenance Release from Oliver Hader - Thank you very much by the way
		53539	2011-10-28 19:36	Oliver Hader	[TASK] Update ext_emconf.php
		53538	2011-10-28 19:33	Oliver Hader	[BUGFIX] #31388: Applying exclude tags is plain wrong
		53535	2011-10-28 18:51	Oliver Hader	[TASK] Add missing locallang.xml file
		53534	2011-10-28 18:42	Oliver Hader	[TASK] Update ext_emconf.php