@@ -1,0 +1,10 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2014-04-07 16:45
+
+$extensionPath = t3lib_extMgm::extPath('a21glossary');
+return array(
+	'tx_a21glossary' => $extensionPath . 'class.tx_a21glossary.php',
+	'user_abc'		=>  $extensionPath . 'class.user_abc.php'
+);
+?>
